tests/error/link_to_non_existant_library.c
// compile -L this_is_a_non-existant_library.lib
// fail "Error: Could not find specified library 'this_is_a_non-existant_library.lib'"

int main(){
    
}
